cmake_minimum_required(VERSION 3.23)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DataStructure main.cpp 2.LinearList/2.1顺序表定义.c)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_静态分配.c)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_静态分配.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_动态分配.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/3.2单链表的实现.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/3.3双链表.cpp)
add_executable(DataStructure main.cpp 2.LinearList/2.1顺序表定义.c 2.LinearList/2.2顺序表的实现_静态分配.c 2.LinearList/2.2顺序表的实现_静态分配.cpp 2.LinearList/2.2顺序表的实现_动态分配.cpp 2.LinearList/3.2单链表的实现.cpp 2.LinearList/3.3双链表.cpp 2.LinearList/3.4循环链表.cpp 2.LinearList/3.4循环双链表.cpp 2.LinearList/3.5静态链表.cpp)
