cmake_minimum_required(VERSION 3.23)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DataStructure main.cpp 2.LinearList/2.1顺序表定义.c)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_静态分配.c)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_静态分配.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/2.2顺序表的实现_动态分配.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/3.2单链表的实现.cpp)
#add_executable(DataStructure main.cpp 2.LinearList/3.3双链表.cpp)
#add_executable(DataStructure main.cpp 3.Stack,Queue,Array/1.1栈的基本概念.cpp)
#add_executable(DataStructure main.cpp 3.Stack,Queue,Array/1.2顺序栈.cpp)
#add_executable(DataStructure main.cpp 3.Stack,Queue,Array/1.3链栈.cpp)
add_executable(DataStructure main.cpp 2.LinearList/2.1顺序表定义.c 2.LinearList/2.2顺序表的实现_静态分配.c 2.LinearList/2.2顺序表的实现_静态分配.cpp 2.LinearList/2.2顺序表的实现_动态分配.cpp 2.LinearList/3.2单链表的实现.cpp 2.LinearList/3.3双链表.cpp 2.LinearList/3.4循环链表.cpp 2.LinearList/3.4循环双链表.cpp 2.LinearList/3.5静态链表.cpp 3.Stack,Queue,Array/1.1栈的基本概念.cpp 3.Stack,Queue,Array/1.2顺序栈.cpp 3.Stack,Queue,Array/1.3链栈.cpp 3.Stack,Queue,Array/2.1队列的基本概念.cpp 3.Stack,Queue,Array/2.2顺序队列.cpp 3.Stack,Queue,Array/2.3链队列.cpp 3.Stack,Queue,Array/3.1栈匹配括号.cpp 4.String/1串的定义.cpp 4.String/2.1串的模式匹配.cpp 4.String/2.2KMP算法.cpp 5.Tree/2.2顺序树.cpp 5.Tree/2.2链式树.cpp 5.Tree/3.1二叉树的遍历.cpp 5.Tree/3.2线索二叉树.cpp 5.Tree/5.5并查集.cpp 6.Graph/2.1邻接矩阵.cpp 6.Graph/2.2邻接表.cpp 6.Graph/2.3十字链表.cpp 6.Graph/3.1广度优先搜索.cpp 6.Graph/3.2深度优先搜索.cpp "6.Graph/3.1广度优先搜索(邻接表).cpp" "6.Graph/2.3深度优先搜索(邻接表).cpp")
